add images of the animal

--- a/Animal-Shelter.html
+++ b/Animal-Shelter.html
@@ -7,10 +7,25 @@
   <body>
     <h1>Animal Shelter</h1>
     <h3>Find your new best friend</h3>
-    <div class="column">Maverick</div>
-    <div class="column">Pony Boy</div>
-    <div class="column">Rosie</div>
-    <div class="column">Henry</div>
-    <div class="column">Prince</div>
+    <div class="column">
+      <h4>Maverick</h4>
+      <img src="IMG/Maverick.jpg" alt="A photo of Maverick">
+    </div>
+    <div class="column">
+      <h4>Pony Boy</h4>
+      <img src="IMG/Pony Boy.jpg" alt="A photo of Pony Boy">
+    </div>
+    <div class="column">
+      <h4>Rosie</h4>
+      <img src="IMG/Rosie.jpg" alt="A photo of Rosie">
+    </div>
+    <div class="column">
+      <h4>Henry</h4>
+    <img src="IMG/Henry.jpg" alt="A photo of Henry">
+    </div>
+    <div class="column">
+      <h4>Prince</h4>
+      <img src="IMG/Prince.jpg" alt="A photo of Prince">
+    </div>
   </body>
 </html>
