add description of each animal

--- a/Animal-Shelter.html
+++ b/Animal-Shelter.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <title>Animal Shelter</title>
-    <link href="CSS/styles.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <h1>Animal Shelter</h1>
-    <h3>Find your new best friend</h3>
-    <div class="column">
-      <h4>Maverick</h4>
-      <img src="IMG/Maverick.jpg" alt="A photo of Maverick">
-    </div>
-    <div class="column">
-      <h4>Pony Boy</h4>
-      <img src="IMG/Pony Boy.jpg" alt="A photo of Pony Boy">
-    </div>
-    <div class="column">
-      <h4>Rosie</h4>
-      <img src="IMG/Rosie.jpg" alt="A photo of Rosie">
-    </div>
-    <div class="column">
-      <h4>Henry</h4>
+
+<head>
+  <title>Animal Shelter</title>
+  <link href="CSS/styles.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <h1 class="centered">Animal Shelter</h1>
+  <h3 class="centered">Find your new best friend</h3>
+  <div class="column">
+    <h4 class="centered">Maverick</h4>
+    <img src="IMG/Maverick.jpg" alt="A photo of Maverick">
+    <h5>German Shepherd Puppy</h5>
+    <p>Female. Large. Bicolor</p>
+    <p>Characteristics: Affectionate, Loyal, Smart, Loves kisses, velcro, loving, Friendly, Gentle, Dignified, Quiet,
+      Playful, Funny</p>
+  </div>
+  <div class="column">
+    <h4 class="centered">Pony Boy</h4>
+    <img src="IMG/Pony Boy.jpg" alt="A photo of Pony Boy">
+    <h5>Beagle Puppy</h5>
+    <p>Male. Large. Bicolor</p>
+    <p>Prefers a home without cats.</p>
+  </div>
+  <div class="column">
+    <h4 class="centered">Rosie</h4>
+    <img src="IMG/Rosie.jpg" alt="A photo of Rosie">
+    <h5>American Bobtail Cat</h5>
+    <p>Adult. Female. Medium</p>
+    <p>Characteristics: Friendly, Affectionate, Gentle, Playful, Curious, Funny</p>
+  </div>
+  <div class="column">
+    <h4 class="centered">Henry</h4>
     <img src="IMG/Henry.jpg" alt="A photo of Henry">
-    </div>
-    <div class="column">
-      <h4>Prince</h4>
-      <img src="IMG/Prince.jpg" alt="A photo of Prince">
-    </div>
-  </body>
+    <h5>Abyssinian Cat</h5>
+    <p>Kitten. Male. Small</p>
+    <p>Characteristics: Friendly, Affectionate, Playful, Smart, Brave, Athletic, Funny</p>
+  </div>
+  <div class="column">
+    <h4 class="centered">Prince</h4>
+    <img src="IMG/Prince.jpg" alt="A photo of Prince">
+    <h5>Dove</h5>
+    <p>Adult. Male. Small</p>
+    <p>Characteristics: Friendly</p>
+  </div>
+</body>
+
 </html>
