modify description of the animals

--- a/Animal-Shelter.html
+++ b/Animal-Shelter.html
@@ -22,14 +22,16 @@
     <img src="IMG/Pony Boy.jpg" alt="A photo of Pony Boy">
     <h5>Beagle Puppy</h5>
     <p>Male. Large. Bicolor</p>
-    <p>Prefers a home without cats.</p>
+    <p>Prefers a home without cats, Loves kisses, velcro, loving, Affectionate, Dignified, Curious</p>
   </div>
   <div class="column">
     <h4 class="centered">Rosie</h4>
     <img src="IMG/Rosie.jpg" alt="A photo of Rosie">
     <h5>American Bobtail Cat</h5>
     <p>Adult. Female. Medium</p>
-    <p>Characteristics: Friendly, Affectionate, Gentle, Playful, Curious, Funny</p>
+    <p>Characteristics: Friendly, Affectionate, Gentle, Playful, Curious, Funny,Loves kisses, velcro, loving, entle, Dignified, Quiet,
+      Playful, Funny,Gentle, Dignified, Quiet,
+      Playful, Funny</p>
   </div>
   <div class="column">
     <h4 class="centered">Henry</h4>
@@ -43,7 +45,8 @@
     <img src="IMG/Prince.jpg" alt="A photo of Prince">
     <h5>Dove</h5>
     <p>Adult. Male. Small</p>
-    <p>Characteristics: Friendly</p>
+    <p>Characteristics: Friendly, Gentle, Dignified, Quiet,
+      Playful, Funny, Loves kisses, velcro, loving</p>
   </div>
 </body>
 
